--- a/fotf/localisation/state_names_l_english.yml
+++ b/fotf/localisation/state_names_l_english.yml
@@ -3,7 +3,7 @@
  STATE_2:0 "Latium"
  STATE_3:0 "Switzerland"
  STATE_4:0 "Lower Austria"
- STATE_5:1 "Ermland-Masuren"
+ STATE_5:1 "Ostpreußen"
  STATE_6:0 "Vlaanderen"
  STATE_7:0 "Holland"
  STATE_8:0 "Luxemburg"
@@ -83,7 +83,7 @@
  STATE_82:0 "Banat"
  STATE_83:0 "Crisana"
  STATE_84:0 "Transylvania"
- STATE_85:0 "Danzig"
+ STATE_85:0 "Westpreußen"
  STATE_86:0 "Poznan"
  STATE_87:1 "Łódz"
  STATE_88:0 "Krakow"
@@ -91,11 +91,11 @@
  STATE_90:0 "Kielce"
  STATE_91:0 "Lwów"
  STATE_92:0 "Lublin"
- STATE_93:0 "Wołyn"
- STATE_94:0 "Polesie"
- STATE_95:0 "Nowogródek"
- STATE_96:1 "Wilejka"
- STATE_97:0 "Białystok"
+ STATE_93:0 "Volyn"
+ STATE_94:0 "Poles'ye"
+ STATE_95:0 "Novogrudok"
+ STATE_96:1 "Vileika"
+ STATE_97:0 "Bielastok"
  STATE_98:0 "Płock"
  STATE_99:0 "Jutland"
  STATE_100:0 "Iceland"
@@ -782,10 +782,15 @@
  STATE_781:0 "Niger"
  STATE_782:0 "Tombouctou"
  STATE_783:0 "Sidi Ifni"
- STATE_784:1 "Wilno"
+ STATE_784:1 "Vilnius"
  STATE_785:0 "Picardy"
  STATE_786:0 "Mauritanian Desert"
  STATE_787:0 "Northern Kashmir"
  STATE_788:0 "Frankfurt"
  STATE_789:0 "Ostrheinland"
  STATE_790:0 "Sarre"
+ STATE_791:0 "Sudauen"
+ STATE_792:0 "Riga"
+ STATE_793:0 "Marijampole"
+ STATE_794:0 "Danzig"
+ STATE_795:0 "Małopolska"
