--- a/fotf/localisation/countries_l_english.yml
+++ b/fotf/localisation/countries_l_english.yml
@@ -143,8 +143,8 @@
  AUS_neutrality_ADJ:0 "Austrian"
  AUS_democratic_ADJ:0 "Austrian"
  AUS_communism_ADJ:0 "Austrian"
- LIT_fascism:0 "Iron Wolf Lithuania"
- LIT_fascism_DEF:0 "Iron Wolf Lithuania"
+ LIT_fascism:0 "Nationalist Lithuania"
+ LIT_fascism_DEF:0 "Nationalist Lithuania"
  LIT_neutrality:0 "Lithuania"
  LIT_neutrality_DEF:0 "Lithuania"
  LIT_democratic:0 "Republic of Lithuania"
@@ -1246,18 +1246,18 @@
  ARM_democratic_ADJ:0 "Armenian"
  ARM_neutrality_ADJ:0 "Armenian"
  ARM_communism_ADJ:0 "Armenian"
- BLR_fascism:0 "Nationalist Belarus"
- BLR_fascism_DEF:0 "Nationalist Belarus"
- BLR_democratic:0 "Republic of Belarus"
- BLR_democratic_DEF:0 "the Republic of Belarus"
- BLR_neutrality:0 "Belarus"
- BLR_neutrality_DEF:0 "Belarus"
- BLR_communism:1 "Belarusian Socialist Republic"
- BLR_communism_DEF:0 "the Belarusian Socialist Republic"
- BLR_fascism_ADJ:0 "Belarusian"
- BLR_democratic_ADJ:0 "Belarusian"
- BLR_neutrality_ADJ:0 "Belarusian"
- BLR_communism_ADJ:0 "Belarusian"
+ BLR_fascism:0 "Ruthenian State"
+ BLR_fascism_DEF:0 "the Ruthenian State"
+ BLR_democratic:0 "Republic of Ruthenia"
+ BLR_democratic_DEF:0 "the Republic of Ruthenia"
+ BLR_neutrality:0 "Ruthenia"
+ BLR_neutrality_DEF:0 "Ruthenia"
+ BLR_communism:1 "Ruthenian Socialist Republic"
+ BLR_communism_DEF:0 "the Ruthenia Socialist Republic"
+ BLR_fascism_ADJ:0 "Ruthenian"
+ BLR_democratic_ADJ:0 "Ruthenian"
+ BLR_neutrality_ADJ:0 "Ruthenian"
+ BLR_communism_ADJ:0 "Ruthenian"
  ANG_fascism:2 "Angolan Empire"
  ANG_fascism_DEF:2 "the Angolan Empire"
  ANG_democratic:0 "Republic of Angola"
@@ -2232,4 +2232,16 @@
  IND_communism:0 "Socialist Republic of Vietnam"
  IND_communism_DEF:0 "the Socialist Republic of Vietnam"
  IND_communism_ADJ:0 "Vietnamese"
+ BAU_fascism:0 "Baltic State"
+ BAU_fascism_DEF:0 "the Baltic State"
+ BAU_democratic:0 "Baltic Republic"
+ BAU_democratic_DEF:0 "the Baltic Republic"
+ BAU_neutrality:0 "Baltic Union"
+ BAU_neutrality_DEF:0 "the Baltic Union"
+ BAU_communism:1 "Baltic People's Republic"
+ BAU_communism_DEF:1 "the Baltic People's Republic"
+ BAU_fascism_ADJ:0 "Baltic"
+ BAU_democratic_ADJ:0 "Baltic"
+ BAU_neutrality_ADJ:0 "Baltic"
+ BAU_communism_ADJ:0 "Baltic"
  
