--- a/fotf/localisation/countries_l_english.yml
+++ b/fotf/localisation/countries_l_english.yml
@@ -423,8 +423,8 @@
  CHI_fascism_DEF:0 "Reorganized Nationalist China"
  CHI_democratic:0 "Republic of China"
  CHI_democratic_DEF:0 "the Republic of China"
- CHI_neutrality:0 "China"
- CHI_neutrality_DEF:0 "China"
+ CHI_neutrality:0 "Qing"
+ CHI_neutrality_DEF:0 "Qing"
  CHI_communism:0 "Chinese People's Republic"
  CHI_communism_DEF:0 "the Chinese People's Republic"
  CHI_fascism_ADJ:0 "Chinese"
@@ -1348,8 +1348,8 @@
  MAN_democratic_DEF:0 "the Manchu Republic"
  MAN_neutrality:1 "Qing China"
  MAN_neutrality_DEF:1 "Qing China"
- MAN_communism:2 "Free Democratic People's Republic of Manchukuo"
- MAN_communism_DEF:1 "the Free Democratic People's Republic of Manchukuo"
+ MAN_communism:2 "Soviet State of Manchuria"
+ MAN_communism_DEF:1 "the Soviet State of Manchuria"
  MAN_fascism_ADJ:0 "Manchu"
  MAN_democratic_ADJ:0 "Manchu"
  MAN_neutrality_ADJ:0 "Manchu"
@@ -2220,8 +2220,8 @@
  RHE_communism_DEF:0 "the Rhenish Commune"
  RHE_communism_ADJ:0 "Rhenish"
 
- IND_neutrality:0 "United Provinces of Indochina"
- IND_neutrality_DEF:0 "the United Provinces of Indochina"
+ IND_neutrality:0 "Indochina"
+ IND_neutrality_DEF:0 "Indochina"
  IND_neutrality_ADJ:0 "Indochinese"
  IND_democratic:0 "Indochinan Republic"
  IND_democratic_DEF:0 "the Indochinan Republic"
