Balkan Update pt1

--- a/fotf/localisation/state_names_l_english.yml
+++ b/fotf/localisation/state_names_l_english.yml
@@ -7,7 +7,7 @@
  STATE_6:0 "Vlaanderen"
  STATE_7:0 "Holland"
  STATE_8:0 "Luxemburg"
- STATE_9:0 "Bohemia"
+ STATE_9:0 "Cechy"
  STATE_10:0 "Warszawa"
  STATE_11:0 "Kaunas"
  STATE_12:0 "Vidzeme"
@@ -41,7 +41,7 @@
  STATE_40:0 "Barnaul"
  STATE_41:0 "Madrid"
  STATE_42:0 "Moselland"
- STATE_43:0 "Northern Hungary"
+ STATE_43:0 "Észak-Magyarország"
  STATE_44:0 "Albania"
  STATE_45:0 "Vojvodina"
  STATE_46:0 "Muntenia"
@@ -67,22 +67,22 @@
  STATE_66:0 "Niederschlesien"
  STATE_67:0 "Oberschlesien"
  STATE_68:0 "Ostmark"
- STATE_69:0 "Sudetenland"
- STATE_70:0 "Western Slovakia"
- STATE_71:0 "Eastern Slovakia"
+ STATE_69:0 "Sudety"
+ STATE_70:0 "Bratislava"
+ STATE_71:0 "Presov"
  STATE_72:0 "Zaolzie"
- STATE_73:0 "Carpathian Ruthenia"
- STATE_74:0 "Eastern Sudetenland"
- STATE_75:0 "Moravia"
- STATE_76:0 "North Transylvania"
- STATE_77:0 "Dobrudja"
- STATE_78:0 "Bessarabia"
+ STATE_73:0 "Podkarpatská"
+ STATE_74:0 "Vychodni Sudety"
+ STATE_75:0 "Morava"
+ STATE_76:0 "Transilvania de Nord"
+ STATE_77:0 "Cadrilater"
+ STATE_78:0 "Bessarabiya"
  STATE_79:0 "Moldova"
- STATE_80:0 "Bucovina"
+ STATE_80:0 "Bukowina"
  STATE_81:0 "Oltenia"
  STATE_82:0 "Banat"
  STATE_83:0 "Crisana"
- STATE_84:0 "Transylvania"
+ STATE_84:0 "Transilvania"
  STATE_85:0 "Westpreußen"
  STATE_86:0 "Poznan"
  STATE_87:1 "Łódz"
@@ -152,8 +152,8 @@
  STATE_151:0 "Eastern Switzerland"
  STATE_152:0 "Upper Austria"
  STATE_153:0 "Tyrol"
- STATE_154:0 "Alföld"
- STATE_155:0 "Transdanubia"
+ STATE_154:0 "Campia de Vest"
+ STATE_155:0 "Dunántúl"
  STATE_156:0 "Calabria"
  STATE_157:0 "Abruzzo"
  STATE_158:0 "Piedmont"
@@ -662,7 +662,7 @@
  STATE_661:0 "Tripolitania"
  STATE_662:0 "Sirte"
  STATE_663:0 "Cyrenaica"
- STATE_664:0 "Southern Slovakia"
+ STATE_664:0 "Kosice"
  STATE_665:1 "Gabès"
  STATE_666:0 "Lappland"
  STATE_667:0 "Lesser Sunda Islands"
@@ -764,7 +764,7 @@
  STATE_763:0 "Königsberg"
  STATE_764:0 "West Banat"
  STATE_765:0 "Qatar"
- STATE_766:0 "Southern Bessarabia"
+ STATE_766:0 "Budzhak"
  STATE_767:0 "North Darfur"
  STATE_768:0 "Rwanda"
  STATE_769:0 "Burundi"
@@ -794,3 +794,6 @@
  STATE_793:0 "Marijampole"
  STATE_794:0 "Danzig"
  STATE_795:0 "Małopolska"
+ STATE_796:0 "Cesky Krumlov"
+ STATE_797:0 "Grodno"
+ STATE_798:0 "Bács-Kiskun"
