--- a/fotf/localisation/victory_points_l_english.yml
+++ b/fotf/localisation/victory_points_l_english.yml
@@ -35,14 +35,14 @@
  VICTORY_POINTS_673:0 "Innsbruck"
  VICTORY_POINTS_688:0 "Salzburg"
  VICTORY_POINTS_9648:0 "Graz"
- VICTORY_POINTS_11542:0 "Prague"
+ VICTORY_POINTS_11542:0 "Praha"
  VICTORY_POINTS_3569:0 "Brno"
  VICTORY_POINTS_6418:0 "Plzen"
  VICTORY_POINTS_6573:0 "Kosice"
  VICTORY_POINTS_9692:0 "Bratislava"
  VICTORY_POINTS_9660:0 "Budapest"
  VICTORY_POINTS_11610:0 "Pecs"
- VICTORY_POINTS_11659:0 "Debrecen"
+ VICTORY_POINTS_11659:0 "Debretin"
  VICTORY_POINTS_391:0 "Amsterdam"
  VICTORY_POINTS_3211:0 "The Hague"
  VICTORY_POINTS_9498:0 "Rotterdam"
@@ -95,7 +95,7 @@
  VICTORY_POINTS_949:0 "Sofia"
  VICTORY_POINTS_6923:0 "Plovdiv"
  VICTORY_POINTS_9783:0 "Varna"
- VICTORY_POINTS_9617:0 "Bucharest"
+ VICTORY_POINTS_9617:0 "Bucuresti"
  VICTORY_POINTS_690:0 "Brasov"
  VICTORY_POINTS_3663:0 "Ploiesti"
  VICTORY_POINTS_6682:0 "Arad"
@@ -637,7 +637,7 @@
  VICTORY_POINTS_1384:0 "Dushanbe"
  VICTORY_POINTS_12333:0 "Ashgabat"
  VICTORY_POINTS_12583:0 "Bishkek"
- VICTORY_POINTS_3707:1 "Chisinău"
+ VICTORY_POINTS_3707:1 "Kishinjov"
  VICTORY_POINTS_5128:0 "Antananarivo"
  VICTORY_POINTS_11984:0 "Nicosia"
  VICTORY_POINTS_13215:0 "Mexicali"
@@ -701,14 +701,14 @@
  VICTORY_POINTS_9449:0 "Belgorod"
  VICTORY_POINTS_3568:0 "Chernigov"
  VICTORY_POINTS_11597:0 "Dobrich"
- VICTORY_POINTS_577:0 "Chernivtsi"
+ VICTORY_POINTS_577:0 "Czerniowce"
  VICTORY_POINTS_3548:0 "Mukačevo"
  VICTORY_POINTS_11539:0 "Žilina"
  VICTORY_POINTS_3583:0 "Ostrava"
  VICTORY_POINTS_6562:0 "Olomouc"
  VICTORY_POINTS_9569:0 "Tábor"
  VICTORY_POINTS_9541:0 "Budweis"
- VICTORY_POINTS_3585:0 "Carlsbad"
+ VICTORY_POINTS_3585:0 "Karlovy Vary"
  VICTORY_POINTS_11432:0 "Aussig"
  VICTORY_POINTS_11401:0 "Liberec"
  VICTORY_POINTS_3473:0 "Küstrin"
@@ -769,7 +769,7 @@
  VICTORY_POINTS_3444:0 "Düsseldorf"
  VICTORY_POINTS_11905:0 "Alexandroupolis"
  VICTORY_POINTS_6652:0 "Craiova"
- VICTORY_POINTS_6727:0 "Cetatea Albă"
+ VICTORY_POINTS_6727:0 "Bilhorod-Dnistrovskyi"
  VICTORY_POINTS_721:0 "Kherson"
  VICTORY_POINTS_406:0 "Molodechno"
  VICTORY_POINTS_11598:0 "Bolzano"
