--- a/fotf/localisation/countries_l_english.yml
+++ b/fotf/localisation/countries_l_english.yml
@@ -109,24 +109,24 @@
  HOL_communism_ADJ:0 "Dutch"
  CZE_fascism:0 "Bohemian Empire"
  CZE_fascism_DEF:0 "the Bohemian Empire"
- CZE_democratic:0 "Czechoslovakia"
- CZE_democratic_DEF:0 "Czechoslovakia"
+ CZE_democratic:0 "Czech Republic"
+ CZE_democratic_DEF:0 "the Czech Republic"
  CZE_neutrality:0 "Kingdom of Bohemia"
  CZE_neutrality_DEF:0 "the Kingdom of Bohemia"
- CZE_communism:0 "Czechoslovak Union"
- CZE_communism_DEF:0 "the Czechoslovak Union"
- CZE_fascism_ADJ:0 "Czechoslovakian"
- CZE_democratic_ADJ:0 "Czechoslovakian"
- CZE_neutrality_ADJ:0 "Czechoslovakian"
- CZE_communism_ADJ:0 "Czechoslovakian"
+ CZE_communism:0 "Czech Union"
+ CZE_communism_DEF:0 "the Czech Union"
+ CZE_fascism_ADJ:0 "Czech"
+ CZE_democratic_ADJ:0 "Czech"
+ CZE_neutrality_ADJ:0 "Czech"
+ CZE_communism_ADJ:0 "Czech"
  POL_fascism:0 "Falangist Poland"
  POL_fascism_DEF:0 "Falangist Poland"
  POL_democratic:0 "Polish Republic"
  POL_democratic_DEF:0 "the Polish Republic"
  POL_communism:0 "Polish People's Republic"
  POL_communism_DEF:0 "the Polish People's Republic"
- POL_neutrality:0 "Poland"
- POL_neutrality_DEF:0 "Poland"
+ POL_neutrality:0 "Polish Republic"
+ POL_neutrality_DEF:0 "the Polish Republic"
  POL_fascism_ADJ:0 "Polish"
  POL_democratic_ADJ:0 "Polish"
  POL_communism_ADJ:0 "Polish"
@@ -143,8 +143,8 @@
  AUS_neutrality_ADJ:0 "Austrian"
  AUS_democratic_ADJ:0 "Austrian"
  AUS_communism_ADJ:0 "Austrian"
- LIT_fascism:0 "Nationalist Lithuania"
- LIT_fascism_DEF:0 "Nationalist Lithuania"
+ LIT_fascism:0 "Lithuania"
+ LIT_fascism_DEF:0 "Lithuania"
  LIT_neutrality:0 "Lithuania"
  LIT_neutrality_DEF:0 "Lithuania"
  LIT_democratic:0 "Republic of Lithuania"
@@ -203,8 +203,8 @@
  ITA_democratic_ADJ:0 "Italian"
  ITA_neutrality_ADJ:0 "Italian"
  ITA_communism_ADJ:0 "Italian"
- ROM_fascism:0 "Legionary Romania"
- ROM_fascism_DEF:0 "Legionary Romania"
+ ROM_fascism:0 "National Legionary State of Romania"
+ ROM_fascism_DEF:0 "the National Legionary State of Romania"
  ROM_democratic:0 "Romania"
  ROM_democratic_DEF:0 "Romania"
  ROM_neutrality:0 "Kingdom of Romania"
@@ -347,14 +347,14 @@
  IRE_democratic_ADJ:0 "Irish"
  IRE_neutrality_ADJ:0 "Irish"
  IRE_communism_ADJ:0 "Irish"
- HUN_fascism:0 "Hungary"
- HUN_fascism_DEF:0 "Hungary"
+ HUN_fascism:0 "Kingdom of Hungary"
+ HUN_fascism_DEF:0 "the Kingdom of Hungary"
  HUN_democratic:0 "Republic of Hungary"
  HUN_democratic_DEF:0 "the Republic of Hungary"
  HUN_neutrality:0 "Kingdom of Hungary"
  HUN_neutrality_DEF:0 "Kingdom of Hungary"
- HUN_communism:0 "Hungarian People's Republic"
- HUN_communism_DEF:0 "the Hungarian People's Republic"
+ HUN_communism:0 "Hungarian Soviet Republic"
+ HUN_communism_DEF:0 "the Hungarian Soviet Republic"
  HUN_fascism_ADJ:0 "Hungarian"
  HUN_democratic_ADJ:0 "Hungarian"
  HUN_neutrality_ADJ:0 "Hungarian"
@@ -862,8 +862,8 @@
  ETH_democratic_ADJ:0 "Ethiopian"
  ETH_neutrality_ADJ:0 "Ethiopian"
  ETH_communism_ADJ:0 "Ethiopian"
- SLO_fascism:0 "Slovakia"
- SLO_fascism_DEF:0 "Slovakia"
+ SLO_fascism:0 "Slovak Republic"
+ SLO_fascism_DEF:0 "the Slovak Republic"
  SLO_democratic:0 "Slovak Republic"
  SLO_democratic_DEF:0 "the Slovak Republic"
  SLO_neutrality:0 "Free State of Slovakia"
@@ -2244,4 +2244,16 @@
  BAU_democratic_ADJ:0 "Baltic"
  BAU_neutrality_ADJ:0 "Baltic"
  BAU_communism_ADJ:0 "Baltic"
+ CAU_democratic:0 "Carpatho-Ukraine"
+ CAU_democratic_DEF:0 "Carpatho-Ukraine"
+ CAU_fascism:0 "Carpathian State"
+ CAU_fascism_DEF:0 "the Carpathian State"
+ CAU_neutrality:0 "Carpatho-Ukraine"
+ CAU_neutrality_DEF:0 "Carpatho-Ukraine"
+ CAU_communism:0 "People's Republic of Carpatho-Ukraine"
+ CAU_communism_DEF:0 "the People's Republic of Carpatho-Ukraine"
+ CAU_democratic_ADJ:0 "Carpathian"
+ CAU_fascism_ADJ:0 "Carpathian"
+ CAU_neutrality_ADJ:0 "Carpathian"
+ CAU_communism_ADJ:0 "Carpathian"
  
